unpackaged/objects/Personal_Discussion__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Co_Applicant_Staying_TogetherS__c</fullName>
        <label>Applicant/Co-Applicant Staying Together</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personal Discussions</relationshipLabel>
        <relationshipName>Personal_Discussions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessed_Rental_Income__c</fullName>
        <label>Assessed Rental Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Margin_In_The_Sector__c</fullName>
        <label>Average Margin In The Sector</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Detail_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Engaged_Into__c</fullName>
        <label>Business Engaged Into</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Residence_Detail_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cashflow_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AGRI COLD-STORAGE</fullName>
                </value>
                <value>
                    <fullName>ACTOR/ SINGER/ ENTERTAINER/ PHOTOGRAPHER/ PAINTER</fullName>
                </value>
                <value>
                    <fullName>ADVERTISING &amp; PROMOTIONS</fullName>
                </value>
                <value>
                    <fullName>AGRI BUSINESS CENTER</fullName>
                </value>
                <value>
                    <fullName>AGRI GODOWN</fullName>
                </value>
                <value>
                    <fullName>AGRI WAREHOUSE</fullName>
                </value>
                <value>
                    <fullName>AGRICULATURAL TOOLS</fullName>
                </value>
                <value>
                    <fullName>AIR CARGO</fullName>
                </value>
                <value>
                    <fullName>ALUMINIUM PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>AMBULANCE SERVICE</fullName>
                </value>
                <value>
                    <fullName>ANIMAL HUSBANDARY</fullName>
                </value>
                <value>
                    <fullName>ANIMATION</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>ARTIFICIAL/IMITATION JEWELLERY</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILE ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILE PARTS</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILE SERVICE CENTRE/GARAGE</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILES  -  AUTOMOBILE ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILES  -  AUTOMOBILE DEALER</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILES  -  AUTOMOBILE PARTS</fullName>
                </value>
                <value>
                    <fullName>BABY CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>BEDSHEET/BLANKET/QUILT/CUSHION COVER/CURTAINS/FLOOR CUSHION</fullName>
                </value>
                <value>
                    <fullName>BEE-KEEPING</fullName>
                </value>
                <value>
                    <fullName>BIO-FERTILIZER PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>BIO-PESTICIDES PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>BPO</fullName>
                </value>
                <value>
                    <fullName>BROKER / AGENT</fullName>
                </value>
                <value>
                    <fullName>BUILDER / DEVELOPER</fullName>
                </value>
                <value>
                    <fullName>BUS ROUTE OPERATOR</fullName>
                </value>
                <value>
                    <fullName>CALL CENTERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comfortable_Loan_Amount__c</fullName>
        <label>Comfortable Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Level_of_Stock__c</fullName>
        <label>Current Level of Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_From_Branch__c</fullName>
        <label>Distance From Branch (in Km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Background_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_Business_Generation__c</fullName>
        <label>Family Business Generation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Applicable__c</fullName>
        <label>GST Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Detail_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Assessed_Income__c</fullName>
        <label>Gross Monthly Assessed Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_of_Activity__c</fullName>
        <label>Level of Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifestyle__c</fullName>
        <label>Lifestyle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Obligation_As_Per_Customer__c</fullName>
        <label>Monthly Obligation As Per Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Residence_Bill__c</fullName>
        <label>Monthly Residence Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Assessed_Income__c</fullName>
        <label>Net Monthly Assessed Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Earning_Members_Staying_Together__c</fullName>
        <label>No of Earning Members Staying Together</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Partners_Director__c</fullName>
        <label>No of Partners/Director</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Staff__c</fullName>
        <label>No of Staff</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Years_in_Current_Business__c</fullName>
        <label>No of Years in Current Business</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Years_in_Current_Premises__c</fullName>
        <label>No of Years in Current Premises</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_Of_Business_Premise__c</fullName>
        <label>Ownership Of Business Premise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PD_Date__c</fullName>
        <label>PD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PD_Done_by__c</fullName>
        <label>PD Done by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Status__c</fullName>
        <label>PD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Met__c</fullName>
        <label>Person Met</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Meeting__c</fullName>
        <label>Place of Meeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residence Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasonality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seasonality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGRICULTURE AND ALLIED ACTIVITIES</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURING</fullName>
                </value>
                <value>
                    <fullName>SERVICES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TV_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_at_Current_Address__c</fullName>
        <label>Time at Current Address (In Years)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Member__c</fullName>
        <label>Total No of Member</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AGRICULTURAL INFRASTRUCTURE</fullName>
                </value>
                <value>
                    <fullName>ANCILLIARY ACTIVITY</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILES</fullName>
                </value>
                <value>
                    <fullName>AUTOMOBILES SERVICES</fullName>
                </value>
                <value>
                    <fullName>CHEMICAL</fullName>
                </value>
                <value>
                    <fullName>COMMERCIAL REAL ESTATE</fullName>
                </value>
                <value>
                    <fullName>COMPUTER</fullName>
                </value>
                <value>
                    <fullName>COMPUTER SERVICES</fullName>
                </value>
                <value>
                    <fullName>CONSTRUCTION MATERIAL</fullName>
                </value>
                <value>
                    <fullName>CONSUMER GOODS</fullName>
                </value>
                <value>
                    <fullName>CONTRACTOR</fullName>
                </value>
                <value>
                    <fullName>EDUCATION INSTITUTE</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL AND ELECTRONICS</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL AND ELECTRONICS SERVICES</fullName>
                </value>
                <value>
                    <fullName>FARM CREDIT</fullName>
                </value>
                <value>
                    <fullName>FOOD &amp; RESTAURANT</fullName>
                </value>
                <value>
                    <fullName>FOOD AND RESTAURANT SERVICES</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE</fullName>
                </value>
                <value>
                    <fullName>HEALTHCARE SERVICES</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL INTERMEDIATE GOODS</fullName>
                </value>
                <value>
                    <fullName>JEWELLERY</fullName>
                </value>
                <value>
                    <fullName>LEATHER</fullName>
                </value>
                <value>
                    <fullName>METALS</fullName>
                </value>
                <value>
                    <fullName>NBFC / FINANCE</fullName>
                </value>
                <value>
                    <fullName>OTHER SERVICES</fullName>
                </value>
                <value>
                    <fullName>PAPER</fullName>
                </value>
                <value>
                    <fullName>PLASTICS</fullName>
                </value>
                <value>
                    <fullName>PROFESSIONAL SERVICES</fullName>
                </value>
                <value>
                    <fullName>RENTAL / ACCOMODATION</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Wheeler_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 Wheeler Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Wheeler_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Wheeler Present</label>
        <type>Checkbox</type>
    </fields>
    <label>Personal Discussion</label>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Personal Discussion #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Discussions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GST_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(GST_Applicable__c,&apos;Yes&apos;) &amp;&amp;
ISBLANK(GST_Number__c)</errorConditionFormula>
        <errorDisplayField>GST_Number__c</errorDisplayField>
        <errorMessage>Please enter GST Number</errorMessage>
    </validationRules>
</CustomObject>